==> dannyf00/xDuino/board_stm8s003.c <==
#include "xduino.h"						//use xduino generic defs
#include "board_stm8s003.h"				//we use board-specific defs

void mcu_init(void) {
	SystemCoreClockHSI_16MHz();					//set clock to hsi, _2MHz, _4MHz, _8MHz, _16MHz
	//SystemCoreClockHSE();							//set clock to hse, @ HSE_VALUE
	//SystemCoreClockHSI_2MHz();					//set clock to hsi, _2MHz, _4MHz, _8MHz, _16MHz
	//SystemCoreClockLSI();							//running at LSI (=128Khz)
	//CLK->PCKENR1=CLK->PCKENR2=0x00;				//disable all peripheral clocks
	//CLK_PeripheralClockConfig(CLK_PERIPHERAL_TIMER2, ENABLE);	//enable clock to tim2

	//initialize timer0, 64:1 prescaler, overflow interrupt enabled
	//stop the timer
	//enable the clock to peripheral
	CLK->PCKENR1 |= CLK_PCKENR1_TIM4;			//'1'=clock enabled, '0'=clock disabled


	//stop the timer
	TIM4->CR1 &=~(1<<0);					//stop the timer
	
	//set up the timer
	TIM4->CR1 = (1<<7) |					//'1'->enable auto reload buffer
	  			(0<<5) |					//'0'->edge aligned. 1..3->center aligned
				(0<<4) |					//'0'->up counter, '1' downcounter
				(0<<3) |					//'0'->continuous mode, '1'->one pulse mode
				(0<<2) |					//'0'-> update enable source
				(0<<1) |					//'0'-> update enabled
				(0<<0);						//counter disabled
	//TIMx->CR2 = 0;							//default value
	//TIMx->SMCR = 0;							//default value
	//TIMx->ETR = 0;							//'0'->external trigger not inverted
	
	TIM4->PSCR = TIM4_PSCR_PSC & 0x04;		//set up the prescaler - 0x07->128:1, 0x06->64:1, 0x04->16:1
	TIM4->CNTR = 0; 						//TIMx->CNTRL = 0;			//reset the counter
	TIM4->ARR = -1;							//load up the auto reload register - msb first
	
	TIM4->SR1&=~(1<<0);						//clear UIF
	TIM4->IER|= (1<<0);						//'1'->enable overflow interrupt, '0'->disable interrupt

	//re-enable the counter
	TIM4->CR1 |= (1<<0);	

//configure TIM1/CCP1..4
#if defined(USE_T1CCP1) || defined(USE_T1CCP2) || defined(USE_T1CCP3) || defined(USE_T1CCP4)
	//configure the time base: as counter, top at CxCCP_PR-1
	//enable the clock to peripheral
	CLK->PCKENR1 |= CLK_PCKENR1_TIM1;			//'1'=clock enabled, '0'=clock disabled

	//stop the timer
	TIM1->CR1 &=~(1<<0);					//stop the timer
	
	//set up the timer
	TIM1->CR1 = (1<<7) |					//'1'->enable auto reload buffer
	  			(0<<5) |					//'0'->edge aligned. 1..3->center aligned
				(0<<4) |					//'0'->up counter, '1' downcounter
				(0<<3) |					//'0'->continuous mode, '1'->one pulse mode
				(0<<2) |					//'0'-> update enable source
				(0<<1) |					//'0'-> update enabled
				(0<<0);						//'0'->counter disabled
	TIM1->CR2 = 0;							//default value
	TIM1->SMCR = 0;							//default value
	TIM1->ETR = 0;							//'0'->external trigger not inverted
	
	TIM1->PSCRH = (TxCCP_PS-1) >> 8; TIM1->PSCRL = (TxCCP_PS-1);	//set up the prescaler - msb first
	TIM1->ARRH  = (TxCCP_PR-1) >> 8; TIM1->ARRL  = (TxCCP_PR-1);	//load up the auto reload register - msb first
	TIM1->CNTRH = 0; TIM1->CNTRL = 0;			//reset the counter
	
	TIM1->SR1&=~(0xff);						//clear UIF
	TIM1->IER&=~(0xff);						//'1'->enable overflow interrupt, '0'->disable interrupt

	//configure output compare
#if defined(USE_T1CCP1) && defined(TIM1_CCMR1_RESET_VALUE)
	TIM1->CCMR1 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(7<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM1->CCER1 = 	(TIM1->CCER1 &~0x0f) |
					(0<<3) |				//1->CC1N active high, 0->CC1N active low
					(0<<2) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<1) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<0) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM1->CCR1H = TIM1->CCR1L = 0;			//0%duty cycle
#endif
	
#if defined(USE_T1CCP2) && defined(TIM1_CCMR2_RESET_VALUE)
	TIM1->CCMR2 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(7<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM1->CCER1 = 	(TIM1->CCER1 &~0xf0) |
					(0<<7) |				//1->CC1N active high, 0->CC1N active low
					(0<<6) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<5) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<4) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM1->CCR2H = TIM1->CCR2L = 0;			//0%duty cycle
#endif
	
#if defined(USE_T1CCP3) && defined(TIM1_CCMR3_RESET_VALUE)
	TIM1->CCMR3 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(7<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM1->CCER2 = 	(TIM1->CCER2 &~0x0f) |
					(0<<3) |				//1->CC1N active high, 0->CC1N active low
					(0<<2) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<1) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<0) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM1->CCR3H = TIM1->CCR3L = 0;			//0%duty cycle
#endif
	
#if defined(USE_T1CCP4)  && defined(TIM1_CCMR4_RESET_VALUE)
	TIM1->CCMR4 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(7<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM1->CCER2 = 	(TIM1->CCER2 &~0xf0) |
					(0<<7) |				//1->CC1N active high, 0->CC1N active low
					(0<<6) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<5) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<4) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM1->CCR4H = TIM1->CCR4L = 0;			//0%duty cycle
#endif
	
	TIM1->BKR |= (1<<7);					//1->set main-output-enable bit, 0->reset MOE (main-output-enable) bit
	//re-enable the counter
	TIM1->CR1 |= (1<<0);	

#endif
	
//configure TIM2/CCP1..4
#if defined(USE_T2CCP1) || defined(USE_T2CCP2) || defined(USE_T2CCP3) || defined(USE_T2CCP4)
	//configure the time base: as counter, top at CxCCP_PR-1
	//enable the clock to peripheral
	CLK->PCKENR1 |= CLK_PCKENR1_TIM2;			//'1'=clock enabled, '0'=clock disabled

	//stop the timer
	TIM2->CR1 &=~(1<<0);					//stop the timer
	
	//set up the timer
	TIM2->CR1 = (1<<7) |					//'1'->enable auto reload buffer
	  			(0<<5) |					//'0'->edge aligned. 1..3->center aligned
				(0<<4) |					//'0'->up counter, '1' downcounter
				(0<<3) |					//'0'->continuous mode, '1'->one pulse mode
				(0<<2) |					//'0'-> update enable source
				(0<<1) |					//'0'-> update enabled
				(0<<0);						//'0'->counter disabled
	//TIM2->CR2 = 0;							//default value
	//TIM2->SMCR = 0;							//default value
	//TIM2->ETR = 0;							//'0'->external trigger not inverted
	
	/*TIM2->PSCRH = (TxCCP_PS-1) >> 8; */TIM2->PSCR/*L*/ = (TxCCP_PS-1);	//set up the prescaler - msb first
	TIM2->ARRH  = (TxCCP_PR-1) >> 8; TIM2->ARRL  = (TxCCP_PR-1);	//load up the auto reload register - msb first
	TIM2->CNTRH = 0; TIM2->CNTRL = 0;			//reset the counter
	
	TIM2->SR1&=~(0xff);						//clear UIF
	TIM2->IER&=~(0xff);						//'1'->enable overflow interrupt, '0'->disable interrupt

	//configure output compare
#if defined(USE_T2CCP1) && defined(TIM2_CCMR1_RESET_VALUE)
	TIM2->CCMR1 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(6<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM2->CCER1 = 	(TIM2->CCER1 &~0x0f) |
					(0<<3) |				//1->CC1N active high, 0->CC1N active low
					(0<<2) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<1) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<0) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM2->CCR1H = TIM2->CCR1L = 0;			//0%duty cycle
#endif
	
#if defined(USE_T2CCP2) && defined(TIM2_CCMR2_RESET_VALUE)
	TIM2->CCMR2 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(6<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM2->CCER1 = 	(TIM2->CCER1 &~0xf0) |
					(0<<7) |				//1->CC1N active high, 0->CC1N active low
					(0<<6) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<5) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<4) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM2->CCR2H = TIM2->CCR2L = 0;			//0%duty cycle
#endif
	
#if defined(USE_T2CCP3) && defined(TIM2_CCMR3_RESET_VALUE)
	TIM2->CCMR3 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(6<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM2->CCER2 = 	(TIM2->CCER2 &~0x0f) |
					(0<<3) |				//1->CC1N active high, 0->CC1N active low
					(0<<2) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<1) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<0) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM2->CCR3H = TIM2->CCR3L = 0;			//0%duty cycle
#endif
	
#if defined(USE_T2CCP4) && defined(TIM2_CCMR4_RESET_VALUE)
	TIM2->CCMR4 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(6<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM2->CCER2 = 	(TIM2->CCER2 &~0xf0) |
					(0<<7) |				//1->CC1N active high, 0->CC1N active low
					(0<<6) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<5) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<4) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM2->CCR4H = TIM2->CCR4L = 0;			//0%duty cycle
#endif
	//TIM2->BKR |= (1<<7);					//1->set main-output-enable bit, 0->reset MOE (main-output-enable) bit
	//re-enable the counter
	TIM2->CR1 |= (1<<0);	

#endif
	
//configure TIM3/CCP1..4
#if defined(USE_T3CCP1) || defined(USE_T3CCP2) || defined(USE_T3CCP3) || defined(USE_T3CCP4)
	//configure the time base: as counter, top at CxCCP_PR-1
	//enable the clock to peripheral
	CLK->PCKENR1 |= CLK_PCKENR1_TIM3;			//'1'=clock enabled, '0'=clock disabled

	//stop the timer
	TIM3->CR1 &=~(1<<0);					//stop the timer
	
	//set up the timer
	TIM3->CR1 = (1<<7) |					//'1'->enable auto reload buffer
	  			(0<<5) |					//'0'->edge aligned. 1..3->center aligned
				(0<<4) |					//'0'->up counter, '1' downcounter
				(0<<3) |					//'0'->continuous mode, '1'->one pulse mode
				(0<<2) |					//'0'-> update enable source
				(0<<1) |					//'0'-> update enabled
				(0<<0);						//'0'->counter disabled
	//TIM3->CR2 = 0;							//default value
	//TIM3->SMCR = 0;							//default value
	//TIM3->ETR = 0;							//'0'->external trigger not inverted
	
	/*TIM3->PSCRH = (TxCCP_PS-1) >> 8;*/ TIM3->PSCR/*L*/ = (TxCCP_PS-1);	//set up the prescaler - msb first
	TIM3->ARRH  = (TxCCP_PR-1) >> 8; TIM3->ARRL  = (TxCCP_PR-1);	//load up the auto reload register - msb first
	TIM3->CNTRH = 0; TIM3->CNTRL = 0;			//reset the counter
	
	TIM3->SR1&=~(0xff);						//clear UIF
	TIM3->IER&=~(0xff);						//'1'->enable overflow interrupt, '0'->disable interrupt

	//configure output compare
#if defined(USE_T3CCP1) && defined(TIM3_CCMR1_RESET_VALUE)
	TIM3->CCMR1 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(6<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM3->CCER1 = 	(TIM3->CCER1 &~0x0f) |
					(0<<3) |				//1->CC1N active high, 0->CC1N active low
					(0<<2) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<1) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<0) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM3->CCR1H = TIM3->CCR1L = 0;			//0%duty cycle
#endif
	
#if defined(USE_T3CCP2) && defined(TIM3_CCMR2_RESET_VALUE)
	TIM3->CCMR2 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(6<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM3->CCER1 = 	(TIM3->CCER1 &~0xf0) |
					(0<<7) |				//1->CC1N active high, 0->CC1N active low
					(0<<6) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<5) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<4) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM3->CCR2H = TIM3->CCR2L = 0;			//0%duty cycle
#endif
	
#if defined(USE_T3CCP3) && defined(TIM3_CCMR3_RESET_VALUE)
	TIM3->CCMR3 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(6<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM3->CCER2 = 	(TIM3->CCER2 &~0x0f) |
					(0<<3) |				//1->CC1N active high, 0->CC1N active low
					(0<<2) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<1) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<0) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM3->CCR3H = TIM3->CCR3L = 0;			//0%duty cycle
#endif
	
#if defined(USE_T3CCP4) && defined(TIM3_CCMR4_RESET_VALUE)
	TIM3->CCMR4 = 	(0<<7) |				//1->clear enabled; 0->clear not enabled
					(6<<4) |				//6->pwm mode 1, 7->pwm mode 2
					(1<<3) |				//0->output preload disabled, 1->output preload enabled
					(0<<2) |				//0->normal operation, 1->enabled output compare fast
					(0<<0) |				//0->output compare as output pin, 1->CC1 as input, 2->CC! as input, 3->CC1 as input
					0x00;
	TIM3->CCER2 = 	(TIM3->CCER2 &~0xf0) |
					(0<<7) |				//1->CC1N active high, 0->CC1N active low
					(0<<6) |				//1->CC1N enabled, 0->CC1N disabled
					(1<<5) |				//0->CC1 normal polarity, 1->CC1 reverse polarity
					(1<<4) |				//1->enable CC1, 0->disable CC1
					0x00;
	TIM3->CCR4H = TIM3->CCR4L = 0;			//0%duty cycle
#endif
	//TIM3->BKR |= (1<<7);					//1->set main-output-enable bit, 0->reset MOE (main-output-enable) bit
	//re-enable the counter
	TIM3->CR1 |= (1<<0);	

#endif
	
	//timer0 is running now
	enableInterrupts();						//enable interrupts globally
}

void pinMode(PIN_T pin, uint8_t mode) {
	GPIO_TypeDef *gpio;
	uint8_t mask;

	if (pin>=DMAX) return;								//invalid pin -> do nothing
	gpio=GPIO_PinDef[pin].gpio;							//get gpio address
	mask=GPIO_PinDef[pin].mask;
	switch (mode) {
		case OUTPUT:		IO_OUT(gpio, mask); break;
		case INPUT_PULLUP:	IO_INPU(gpio, mask); break;
		case INPUT:
		default:			IO_IN(gpio, mask); break;
	}
}
